k8s/ai-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ai-deployment
  labels:
    name:  ai-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-server
  template:
    metadata:
      labels:
        app:  ai-server
    spec:
      imagePullSecrets:
      - name: ecr-creds
      containers:
      - image: YOUR_AWS_ACCOUNT_ID.dkr.ecr.YOUR_REGION.amazonaws.com/capstone/ai-orchestration:latest
        imagePullPolicy: Always
        name:  ai-server
        resources:
          requests:
            cpu: "150m"
            memory: "128M"
          limits:
            cpu: "250m"
            memory: "256M"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10   
        ports:
        - containerPort:  3000
          name:  ai-server-port
