k8s/router-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  router-deployment
  labels:
    name:  router-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  router
  template:
    metadata:
      labels:
        app:  router
    spec:
      imagePullSecrets:
      - name: ecr-creds
      serviceAccountName: resource-manager
      containers:
      - image: YOUR_AWS_ACCOUNT_ID.dkr.ecr.YOUR_REGION.amazonaws.com/capstone/router:latest
        imagePullPolicy: Always
        name:  router-server
        resources:
          requests:
            cpu: "100m"
            memory: "250M"
          limits:
            cpu: "150m"
            memory: "500M"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10    
        ports:
        - containerPort:  3000
          name:  my-name
