k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
